# prowess

./: Antenna.Def.10  Antenna.Def.264  Antenna.Def.40  Makefile  RC.sh  README  Sky.Par
cfitsio/: Makefile  cfitsio.pc  config.status
doc/: explain  genFITS  plotmodl  projection.eps  projection.fig  projection.fig.bak  psFITS
inc/: 325.source.counts  325.source.counts.50Jy  coolwarm.cmap  corrdefs.h  csource.mas  fitsdefs.h  ippcdefs.h  matdefs.h  plotdefs.h  remezdefs.h  skydefs.h  src.cnt.wineringa  summerlilac.cmap  sysdefs.h  version.h  wenss.fluxes  winterbeige.cmap
lib/: libfftw3f.la  libgslcblas.so.0  libhistory.old  libhistory.so.6.2.old  libreadline.old
mscripts/: 325.source.counts.50Jy  325.source.counts.50Jy.modified  3dps.m  ant-init.info  baselines.info  coolwarm.m  diverging_map.m  fgrm.m  hi_analysis.m  make-point-source-map.m  poiss.eps  summerlilac.m  winterbeige.m
opt/opt-3.7/: COPYING  HPUX.Install  Makefile  Makefile.am  Makefile.in  NEWS  README  README.HPPD  config.cache  config.status  configure  (+10 more)
opt/opt-3.7/src/: Makefile  Makefile.am  Makefile.in  Makefile.in.cln  ag.c  ag.h  makeopth.pl  opt.h  opt_menu.c  opt_p.h  opt_proc.c  opt_reg.c  opt_regt.c  opt_regt.c.cln  opt_sf.h  opt_util.c
opt/opt-3.7/test/: Makefile  Makefile.am  Makefile.in  birthday.c  checkopt  hooktest.c  iloop.c  testmain.c  testopt.c  testtypes.c
src/: #genFITSmain.c#  #plotsubs.c#  .v2corrmain.c.swp  CaSPORT.c  FITS2modelmain.c  FITSaddmain.c  FITSapplcalmain.c  FITSbandpassmain.c  FITSbandpassmain.mod.c  FITSbeambandmain.c  FITSbeamformcalmain.c  FITSbeamformmain.c  FITScalibmain.c  FITSchavmain.c  FITSconcatmain.c  FITSfreqbaselinemain.c  FITSinfomain.c  FITSitergainmain.c  FITSitersolmain.c  FITSlincmain.c  FITSlogcmain.c  FITSpolviewmain.c  FITSselfcalmain.c  FITSsubtractmain.c  FITStimebaselinemain.c  FITStimefreqmain.c  FITSviewmain.c  addmodelmain.c  applycalmain.c  avgv2main.c  calibmain.c  conv.c  corr2FITSmain.c  corr2fits.c  corrsubs.c  corrsubs_new.c  deconvolveprimarybeammain.c  fitalphamain.c  fitpbeammain.c  fitssubs.c  (+51 more)
(+6 files in other folders)
